# TrendOps

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ACTION_ITEMS.md  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  Dockerfile.cover-letter  Dockerfile.crawler  Dockerfile.db-init  Dockerfile.scheduler  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  news_crawling.ipynb  pyproject.toml  requirements.yaml  setup-miniconda-patched-requirements.yaml
.github/: copilot-instructions.md
cover_letter/: __init__.py  company_service.py  db.py  generation_service.py  jd_service.py  llm_client.py  mapping_service.py  models.py  profile_service.py  question_service.py
crawling/: naver_mcp_crawler.py  news_crawling.ipynb  news_crawling.py  news_crawling_mcp.py
db/: connection_test.py  db.ipynb  db_news.py
docs/: BALANCED_MODE_COMPLETION_REPORT.md  BALANCED_MODE_REVIEW_REPORT.md  BALANCED_MODE_SUMMARY.md  CI_CD_IMPROVEMENT_GUIDE.md  CI_CD_QUICK_REFERENCE.md  CI_CD_REVIEW.md  CI_CD_TRANSITION_STRATEGY.md  MCP_NEWS_SERVICES_RESEARCH.md  MOCK_TESTING_EXPLAINED.md  MOCK_VS_REAL_API_DIAGRAM.txt  NAVER_MCP_INTEGRATION.md  NAVER_MCP_VS_FIRECRAWL_MCP.md  PROJECT_ANALYSIS_AND_ROADMAP.md  QUICK_START_GUIDE.md  README.md
frontend/: cover_letter_app.py
scripts/: db_init.py  scheduler.py  setup-dev.sh  wait-for-postgres.sh
tests/: README.md  __init__.py  functional_test.py  test_cover_letter_company.py  test_cover_letter_generation.py  test_cover_letter_jd.py  test_cover_letter_mapping.py  test_cover_letter_profile.py  (+2 more)
(+38 files in other folders)
