[project]
name = "trendops"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-genai",
    "streamlit",
    "psycopg2-binary",
    "requests",
    "beautifulsoup4",
]

[project.optional-dependencies]
dart = ["dart-fss"]
firecrawl = ["firecrawl-py"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Note: nbqa configuration removed as nbqa hooks are disabled in .pre-commit-config.yaml
# Notebooks are for development/exploration and don't require strict formatting enforcement

# Pylint는 .pylintrc 파일을 따로 사용하거나 여기에 설정할 수 있습니다.
# [tool.pylint.master]
# max-line-length = 88
